Typo and erroneous <p> tag

--- a/meetings.html
+++ b/meetings.html
@@ -4,10 +4,10 @@ layout: post
 ---
 
 <p>
-Currently there have been no meetings. We will have our first one at the start of 2017.</p>
+Currently there have been no meetings. We will have our first one at the start of 2017.
 </p>
 
 <p>To stay informed about our upcoming meetings you can keep up to date with
 #events or #elixir channels on <a
-href='http://nitech.herokuapp.com/'>Nitech</a>. Alternativley you can subscribe
+href='http://nitech.herokuapp.com/'>Nitech</a>. Alternatively you can subscribe
 to the <a href="https://www.meetup.com/Belfast-Elixir/">meetup</a> page.</p>
