--- a/code_of_conduct.html
+++ b/code_of_conduct.html
@@ -66,7 +66,7 @@ member of the volunteer team.
 
 <ul>
 <li>Stephen McCullough (<a href="https://twitter.com/swmcc">@swmcc</a> - stephen.mccullough@gmail.com)</li>
-<li>Stephen Holdsworth (<a href="https://twitter.com/holsee">@holsee</a>)</li>
+<li>Steven Holdsworth (<a href="https://twitter.com/holsee">@holsee</a>)</li>
 <li>Maurice Kelly (<a href="https://twitter.com/mauricerkelly">@mauricerkelly</a>)</li>
 </ul>
 
