Added alert logic sponsor

--- a/about_us.html
+++ b/about_us.html
@@ -23,6 +23,10 @@ an interest in Elixir, and so we want anyone who is interested in Elixir to be
 able to participate</li>
 </ul>
 
+<h2>Sponsors</h2>
+<p><img src='https://a248.e.akamai.net/secure.meetupstatic.com/photos/sponsor/e/4/8/5/iab120x90_2638501.jpeg'></p>
+<p>As a local Erlang employer, <a href='https://www.alertlogic.com/'>Alert Logic</a> are kind sponsors of Belfast Elixir</p>
+
 <h2>Volunteers</h2>
 
 <h4>Stephen McCullough</h4>
