--- a/code_of_conduct.html
+++ b/code_of_conduct.html
@@ -5,8 +5,8 @@ layout: post
 
 <p>
 It is of primary importance that everyone who wants to participate feels safe
-and welcome. When participating in Belfast Elixir, either online or offline, at
-Skills Matter or at the pub afterwards, we expect you to:
+and welcome. When participating in Belfast Elixir, either online or offline,
+at the pub afterwards, we expect you to:
 
 <ul>
 <li>behave respectfully towards other people — they’re real humans, just like you</li>
