--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@ layout: post
 <h3>Blog Posts</h3>
 <hr>
 {% for post in site.posts %}
-<h4><a href="{{post.url | prepend: site.baseurl}}">{{post.title}}</a></h4>
+<h4><a href="{{post.url | prepend: site.baseurl}}">{{post.title}} - {{post.date | date_to_long_string }}</a></h4>
 {% endfor %}
