Added Mo's talk (slides and video)

--- a/_posts/2017-02-02-first-meetup.html
+++ b/_posts/2017-02-02-first-meetup.html
@@ -2,12 +2,34 @@
 layout: post
 title:  "First Meetup!"
 date:   2017-02-02 16:16:01 -0600
-categories: meetup holsee maurice otp 
+categories: meetup holsee maurice otp introductory 
 ---
-<p>Please come along to our first meetup, hosted by <a href="http://www.shopkeep.com">ShopKeep</a>.</p>
-<p>We have two great talks lined up.</p>
+<p>Our first meetup at <a href="http://www.shopkeep.com">ShopKeep</a>
+was a success.</p>
+
+<p>We had two great talks and a great turn out.</p>
+
 <h4>Elixir for non-Rubyists</h4>
-<p><a href="https://twitter.com/mauricerkelly">Maurice Kelly</a> is talking about why Elixir isn't just for Rubyists who want to be more functional society.</p>
+<p><a href="https://twitter.com/mauricerkelly">Maurice Kelly</a> talked
+about why Elixir isn't just for Rubyists and gave a great introductory talk
+into the language.</p>
+<p>
+
+<h5>Video</h5>
+<p><iframe width="560" height="315" src="https://www.youtube.com/embed/2nKoTSGVquc" frameborder="0" allowfullscreen></iframe></p>
+
+<h5>Slides</h5>
+<p>
+<script async class="speakerdeck-embed" data-id="ccf3389a1e5443448d017b24417ea974" data-ratio="1.77777777777778" src="//speakerdeck.com/assets/embed.js"></script>
+</p>
 <h4>Why OTP design principles are important</h4>
-<p><a href="https://twitter.com/holsee">Steven Holdsworth</a> is giving a brief tour of OTP and what it has to offer with regards to distribution and resiliency and why following them opens up a world of tooling and compatibility.</p>
+<p><a href="https://twitter.com/holsee">Steven Holdsworth</a> gave us a live
+coding talk and a tour of OTP and what it has to offer with regards to 
+distribution and resiliency and why following them opens up a world of tooling
+and compatibility.</p>
+<h5>Video</h5>
+<p>Coming Soon.</p>
+<h5>Slides</h5>
+<p>Coming Soon.</p>
+<h5>Slides</h5>
 
