Amended 'want to speak' text now that we have actually had a meeting.  Also added book raffle to the first meetup talk.

--- a/_posts/2017-02-02-first-meetup.html
+++ b/_posts/2017-02-02-first-meetup.html
@@ -7,7 +7,10 @@ categories: meetup holsee maurice otp introductory
 <p>Our first meetup at <a href="http://www.shopkeep.com">ShopKeep</a>
 was a success.</p>
 
-<p>We had two great talks and a great turn out.</p>
+<p>We had two great talks and a great turn out. <a
+  href="http://www.alertlogic.com">Alert Logic</a> kindly sponsored two books
+in a raffle. It would be great for the winners to give a book review on this
+site if they have the time (heavy hint).</p>
 
 <h4>Elixir for non-Rubyists</h4>
 <p><a href="https://twitter.com/mauricerkelly">Maurice Kelly</a> talked
