Added slides for the otp talk

--- a/_posts/2017-02-02-first-meetup.html
+++ b/_posts/2017-02-02-first-meetup.html
@@ -33,6 +33,5 @@ and compatibility.</p>
 <h5>Video</h5>
 <p>Coming Soon.</p>
 <h5>Slides</h5>
-<p>Coming Soon.</p>
-<h5>Slides</h5>
+<p><iframe src="//slides.com/stevenholdsworth/otp/embed" width="576" height="420" scrolling="no" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></p>
 
