Amended meeting page

--- a/meetings.html
+++ b/meetings.html
@@ -4,7 +4,13 @@ layout: post
 ---
 
 <p>
-Currently there have been no meetings. We will have our first one at the start of 2017.
+Currently we try and hold meetings once every 4/6 weeks. We have three main types
+of meetings:
+
+<ul>
+  <li>Speaking Night - several present a talk on a topic of their choice.</li>
+  <li>Hack Night - collaborate on a few projects or get help on your own project.</li>
+  <li>Social Night - over a coffee or a beer we discuss all things Elixir.</li>
 </p>
 
 <p>To stay informed about our upcoming meetings you can keep up to date with
