Updated old twitter name to be new one

--- a/about_us.html
+++ b/about_us.html
@@ -30,7 +30,7 @@ able to participate</li>
 <h2>Volunteers</h2>
 
 <h4>Stephen McCullough</h4>
-<p>Can be found on the various interwebs as @swmcc (<a href="http://www.github.com/swmcc">github</a>|<a href="http://www.twitter.com/swmcc">twitter</a>|<a href="http://swm.cc">web</a>). Currently a Senior Software Engineer at <a href="http://www.shopkeep.com">ShopKeep</a> where he spends most of his time in python or ruby.</p>
+<p>Can be found on the various interwebs - (<a href="http://www.github.com/swmcc">github</a>|<a href="http://www.twitter.com/theonlyswmcc">twitter</a>|<a href="http://swm.cc">web</a>).
 
 <h4>Steven Holdsworth</h4>
 <p>Likes designing and implementing distributed systems and machine learning stuff. Elixir and Erlang dev by day.</p>
