--- a/code_of_conduct.html
+++ b/code_of_conduct.html
@@ -65,7 +65,7 @@ member of the volunteer team.
 <h2>Volunteer team</h2>
 
 <ul>
-<li>Stephen McCullough (<a href="https://twitter.com/swmcc">@swmcc</a> - stephen.mccullough@gmail.com)</li>
+<li>Stephen McCullough (<a href="https://twitter.com/theonlyswmcc">@swmcc</a> - stephen.mccullough@gmail.com)</li>
 <li>Steven Holdsworth (<a href="https://twitter.com/holsee">@holsee</a>)</li>
 <li>Maurice Kelly (<a href="https://twitter.com/mauricerkelly">@mauricerkelly</a>)</li>
 </ul>
