Modified site to reflect new meetup format and updated slack links.

--- a/meetings.html
+++ b/meetings.html
@@ -4,16 +4,22 @@ layout: post
 ---
 
 <p>
-Currently we try and hold meetings once every 4/6 weeks. We have three main types
+Currently we try and hold a short meeting every 2/3 weeks. We have two main types
 of meetings:
 
 <ul>
+  <li>Hack Night - collaborate (mob program) on a project.</li>
   <li>Speaking Night - several present a talk on a topic of their choice.</li>
-  <li>Hack Night - collaborate on a few projects or get help on your own project.</li>
-  <li>Social Night - over a coffee or a beer we discuss all things Elixir.</li>
+</ul>
 </p>
 
+<h3>Hack Night</h3>
+<p>Our most common theme. We take a project and <a href="https://en.wikipedia.org/wiki/Mob_programming">mob program</a> around it.
+This gives all members a chance to code no matter their level of experience. We are currently implementing a <a href="https://github.com/belfastelixir/DMS">Dead Man's Switch</a>.</p>
+<h3>Speaking Night</h3>
+<p>If you are interested in Erlang / Elixir (anything that runs on BEAM) then and are interested in speaking, feel free to reach out to one of the organisers and we would gladly host you.</p>
+
 <p>To stay informed about our upcoming meetings you can keep up to date with
-#events or #elixir channels on <a
-href='http://nitech.herokuapp.com/'>Nitech</a>. Alternatively you can subscribe
+#beam channels on <a
+href='http://irishtechcommunity.com/'>Irish Tech Community</a>. Alternatively you can subscribe
 to the <a href="https://www.meetup.com/Belfast-Elixir/">meetup</a> page.</p>
