--- a/want_to_speak.html
+++ b/want_to_speak.html
@@ -5,13 +5,9 @@ layout: post
 
 <h2>Want to Speak?</h2>
 
-<p>We want to  meet every two or three months. There should typically two
-talks. Sometimes there’ll be pizza.</p>
-
-<p>To stay informed about our upcoming meetings you can keep up to date with
-#events or #elixir channels on <a
-href='http://nitech.herokuapp.com/'>Nitech</a>. Alternativley you can subscribe
-to the <a href="https://www.meetup.com/Belfast-Elixir/">meetup</a> page.</p>
+<p>We want to  meet once every two or three weeks. Usually it will be a Hack Night.
+However if it is a talk night (there is no reason we can't do both) there should 
+typically be two talks lasting about 30mins each. Sometimes there’ll be pizza.</p>
 
 <p>
 Our goal is to accept any offered talk. If your talk is obviously about Elixir
