--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: post
 
 <h4><a href="/about_us.html">About Us</a></h4>
 <h4><a href="/meetings.html">Meetings</a></h4>
-<h4><a href="/want_to_speak.html">Want to speak?</a></h4>
+<h4><a href="/want_to_speak.html">Want to Speak?</a></h4>
 <h4><a href="/code_of_conduct.html">Code of Conduct</a></h4>
 <hr>
 <h3>Blog Posts</h3>
